package fr.football.patterns.factory;

public interface Coach {
    void coach();
}
