package fr.football.patterns.factory;

public interface Player {
    void play();
}
